--- a/Dev07_Handout/Motor2D/Motor2D.vcxproj
+++ b/Dev07_Handout/Motor2D/Motor2D.vcxproj
@@ -76,6 +76,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="j1Collision.cpp" />
     <ClCompile Include="j1Main.cpp" />
     <ClCompile Include="j1App.cpp" />
     <ClCompile Include="j1Audio.cpp" />
@@ -87,8 +88,11 @@
     <ClCompile Include="j1Textures.cpp" />
     <ClCompile Include="j1Window.cpp" />
     <ClCompile Include="PugiXml\src\pugixml.cpp" />
+    <ClCompile Include="j1Character.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="j1Character.h" />
+    <ClInclude Include="j1Collision.h" />
     <ClInclude Include="j1Map.h" />
     <ClInclude Include="j1Scene.h" />
     <ClInclude Include="p2DynArray.h" />
