--- a/Dev07_Handout/Motor2D/Motor2D.vcxproj
+++ b/Dev07_Handout/Motor2D/Motor2D.vcxproj
@@ -91,6 +91,7 @@
     <ClCompile Include="j1Player.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Animation.h" />
     <ClInclude Include="j1Player.h" />
     <ClInclude Include="j1Collision.h" />
     <ClInclude Include="j1Map.h" />
