--- a/SantaRules/Motor2D/Motor2D.vcxproj
+++ b/SantaRules/Motor2D/Motor2D.vcxproj
@@ -14,7 +14,7 @@
     <ProjectGuid>{2AF9969B-F202-497B-AF30-7BEF9CE8005E}</ProjectGuid>
     <RootNamespace>programacio_2</RootNamespace>
     <ProjectName>Development - Class 7</ProjectName>
-    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -76,6 +76,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="j1Entity.cpp" />
+    <ClCompile Include="j1EntityManager.cpp" />
+    <ClCompile Include="j1EntityMovable_Ground.cpp" />
+    <ClCompile Include="j1EntityPlayer.cpp" />
     <ClCompile Include="j1FadeToBlack.cpp" />
     <ClCompile Include="j1Collision.cpp" />
     <ClCompile Include="j1Main.cpp" />
@@ -91,9 +95,15 @@
     <ClCompile Include="j1Window.cpp" />
     <ClCompile Include="PugiXml\src\pugixml.cpp" />
     <ClCompile Include="j1Player.cpp" />
+    <ClCompile Include="J1EntityMovable.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h" />
+    <ClInclude Include="J1EntityMovable.h" />
+    <ClInclude Include="j1Entity.h" />
+    <ClInclude Include="j1EntityManager.h" />
+    <ClInclude Include="j1EntityMovable_Ground.h" />
+    <ClInclude Include="j1EntityPlayer.h" />
     <ClInclude Include="j1FadeToBlack.h" />
     <ClInclude Include="j1Pathfinding.h" />
     <ClInclude Include="j1Player.h" />
