--- a/SantaRules/Motor2D/Motor2D.vcxproj.filters
+++ b/SantaRules/Motor2D/Motor2D.vcxproj.filters
@@ -46,6 +46,21 @@
     <ClCompile Include="j1Pathfinding.cpp">
       <Filter>Desenvolupament  ========\Modules</Filter>
     </ClCompile>
+    <ClCompile Include="j1Entity.cpp">
+      <Filter>Desenvolupament  ========\entity structure</Filter>
+    </ClCompile>
+    <ClCompile Include="j1EntityManager.cpp">
+      <Filter>Desenvolupament  ========\entity structure</Filter>
+    </ClCompile>
+    <ClCompile Include="J1EntityMovable.cpp">
+      <Filter>Desenvolupament  ========\entity structure\Movable</Filter>
+    </ClCompile>
+    <ClCompile Include="j1EntityPlayer.cpp">
+      <Filter>Desenvolupament  ========\entity structure\Movable\Movable_Ground</Filter>
+    </ClCompile>
+    <ClCompile Include="j1EntityMovable_Ground.cpp">
+      <Filter>Desenvolupament  ========\entity structure\Movable\Movable_Ground</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="j1Window.h">
@@ -114,6 +129,21 @@
     <ClInclude Include="j1Pathfinding.h">
       <Filter>Desenvolupament  ========\Modules</Filter>
     </ClInclude>
+    <ClInclude Include="j1Entity.h">
+      <Filter>Desenvolupament  ========\entity structure</Filter>
+    </ClInclude>
+    <ClInclude Include="j1EntityManager.h">
+      <Filter>Desenvolupament  ========\entity structure</Filter>
+    </ClInclude>
+    <ClInclude Include="J1EntityMovable.h">
+      <Filter>Desenvolupament  ========\entity structure\Movable</Filter>
+    </ClInclude>
+    <ClInclude Include="j1EntityPlayer.h">
+      <Filter>Desenvolupament  ========\entity structure\Movable\Movable_Ground</Filter>
+    </ClInclude>
+    <ClInclude Include="j1EntityMovable_Ground.h">
+      <Filter>Desenvolupament  ========\entity structure\Movable\Movable_Ground</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Programacio 2 ===========">
@@ -133,6 +163,15 @@
     </Filter>
     <Filter Include="Desenvolupament  ========\Tools\PuguiXML">
       <UniqueIdentifier>{7cb78d67-17cc-45eb-af97-e2106becce7b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Desenvolupament  ========\entity structure">
+      <UniqueIdentifier>{135183f6-aed8-4aee-8c8d-8a80aa61df64}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Desenvolupament  ========\entity structure\Movable">
+      <UniqueIdentifier>{efd926b1-1d60-4035-ab62-0a3d6a09e714}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Desenvolupament  ========\entity structure\Movable\Movable_Ground">
+      <UniqueIdentifier>{fa934733-7249-4f3d-999e-929ee79f05d0}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
