--- a/SantaRules/Motor2D/Motor2D.vcxproj.filters
+++ b/SantaRules/Motor2D/Motor2D.vcxproj.filters
@@ -61,6 +61,12 @@
     <ClCompile Include="j1EntityMovable_Ground.cpp">
       <Filter>Desenvolupament  ========\entity structure\Movable\Movable_Ground</Filter>
     </ClCompile>
+    <ClCompile Include="j1PerfTimer.cpp">
+      <Filter>Desenvolupament  ========\Tools</Filter>
+    </ClCompile>
+    <ClCompile Include="j1Timer.cpp">
+      <Filter>Desenvolupament  ========\Tools</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="j1Window.h">
@@ -143,6 +149,12 @@
     </ClInclude>
     <ClInclude Include="j1EntityMovable_Ground.h">
       <Filter>Desenvolupament  ========\entity structure\Movable\Movable_Ground</Filter>
+    </ClInclude>
+    <ClInclude Include="j1Timer.h">
+      <Filter>Desenvolupament  ========\Tools</Filter>
+    </ClInclude>
+    <ClInclude Include="j1PerfTimer.h">
+      <Filter>Desenvolupament  ========\Tools</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
